src/snapshots/libflatterer__tests__basic.json-ods-tables.csv.snap
---
source: src/lib.rs
expression: output
snapshot_kind: text
---
- "table_name,table_title"
- "main,main"
- "developer,developer"
- "platforms,platforms"
