src/snapshots/libflatterer__tests__basic.json-tables.csv.snap
---
source: src/lib.rs
assertion_line: 1900
expression: output

---
- "table_name,table_title"
- "main,main"
- "developer,developer"
- "platforms,platforms"

