src/snapshots/libflatterer__tests__basic.json-tablescsv-tablesonly-datapackage.json.snap
---
source: src/lib.rs
assertion_line: 2209
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: developer
    flatterer_name: developer
    title: Devs
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          count: 2
        - name: _link_main
          title: _link_main
          type: string
          count: 2
        - name: name
          title: name
          type: string
          count: 2
      primaryKey: _link
      foreignKeys:
        - fields: _link_main
          reference:
            resource: Games
            fields: _link
    path: csv/Devs.csv
  - profile: tabular-data-resource
    name: main
    flatterer_name: main
    title: Games
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          count: 2
        - name: id
          title: id
          type: number
          count: 2
        - name: title
          title: title
          type: string
          count: 2
        - name: releaseDate
          title: releaseDate
          type: datetime
          count: 2
        - name: rating_code
          title: rating_code
          type: string
          count: 2
        - name: rating_name
          title: rating_name
          type: string
          count: 2
      primaryKey: _link
    path: csv/Games.csv

