src/snapshots/libflatterer__tests__basic.json-tablescsv-tablesonly-tables.csv.snap
---
source: src/lib.rs
assertion_line: 1901
expression: output

---
- "table_name,table_title"
- "developer,Devs"
- "main,Games"

